[package]
name = "zappable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.15"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0"
anyhow = "1.0"
nostr-sdk = { git = "https://github.com/rust-nostr/nostr", rev = "bcacfb7" }
tokio = "1.0"
tonic_lnd = { git = "https://github.com/voltagecloud/tonic_lnd", rev = "daf90133a66f561755024468ec6ad8cbe749ab51" } 
urlencoding = "2.1.2"
